# sam-rust-template

./: .gitignore  README.md  template.yaml
.aws-sam/pipeline/: pipelineconfig.toml
.github/workflows/: pipeline.yaml
rust_app/: Cargo.toml
sam-app-dev/: template.yaml
sam-app-prod/: README.md
