[package]
name = "sam-app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.6.1"
aws-sdk-dynamodb = "1.71.0"
aws-smithy-client = { version = "0.60.0", features = ["test-util"] }
lambda_http = "0.14.0"
tokio = { version = "1.44.1", features = ["full"] }
